--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="principal">
         <div class="foto">
-            <h2><img src="./imagens/fotohonda1.jpg"></h2>
+            <h2><img src="./imagens/GioC.png"></h2>
                 <h2>Nome: Marcos Dantas</h2>
 
         </div>
@@ -34,17 +34,17 @@
 
         </div>
         <div class="objetivos">
-            <h2>Objetivos:
-                Colaborar em um ambiente de trabalho onde possa
-                colocar em pratica meus conhecimentos em favor da instituição
-                na qual viso integrar, focando sempre o beneficio e o crescimento
-                da organização e o crescimento profissional.
+            <h1>Objetivos:</h1>
+                <h2>Colaborar em um ambiente de trabalho onde possa
+                colocar em pratica meus conhecimentos em favor da instituição, 
+                focando sempre o beneficio e o crescimento
+                da organização.
             </h2>
 
         </div>
         <div class="habilidades">
-            <h2>Habilidades:</h2>
-
+            <h1> Habilidades:</h1>
+            <h2> Comunicação, Liderança,  Comprometimento, Criatividade, Iniciativa e Trabalho em Equipe. </h2>
         </div>
     </div>
 </body>
